2008-07-25  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Fixed some miss spellings found by Asgeir
	Frimannsson.
	* releases.xml.in: Fixed pessulus name, and commented some non-working
	modules.

2008-07-25  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Fixed xkeyboard-config definition.
	* modules.py: Added -f switch to 'git clean' (need either -f or -n).

2008-07-24  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added hotssh module.

2008-07-23  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Removed link for PL team Web page, as
	requested by Wadim Dziedzic.

2008-07-22  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: epiphany branched for 2.24.

2008-07-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: bug-buddy branched for 2.22. New module
	gnome-launch-box.

2008-07-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: gconf HEAD is not stringfrozen.

2008-07-08  Danilo Šegan  <danilo@gnome.org>

	* modules.py: Add bzr support by <robert@canonical.com>.

2008-07-08  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Sinhala coordinator.

2008-07-04  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Removed invalid webpage for ks.

2008-07-04  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Kashmiri team began real activity.

2008-07-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gperfmeter is now obsolete.

2008-06-29  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gnome-keyring branched for gnome-2-22.

2008-06-27  Johannes Schmid  <jhs@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	Updated gnome-build branch

2008-06-22  Claude Paroz  <claude@2xlibre.net>

	* HACKING: Instructions on debugging.
	* gnome-modules.xml.in: